fix: Stretch Height of Background Popup by 100% (#48)

--- a/rss-puzzle/src/app/view/header/header.scss
+++ b/rss-puzzle/src/app/view/header/header.scss
@@ -21,7 +21,7 @@
     }
 
     .popup{
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         width: 100%;
